[gd_scene load_steps=10 format=3 uid="uid://bbsu5a0nxmigo"]

[ext_resource type="Script" path="res://Enemies/enemy_1/enemy_1.gd" id="1_yrn2s"]
[ext_resource type="PackedScene" uid="uid://bt524gbxa8tof" path="res://scenes/components/health_component.tscn" id="2_spolp"]
[ext_resource type="PackedScene" uid="uid://bdtk8mceeln11" path="res://scenes/components/velocity_component.tscn" id="3_k450e"]
[ext_resource type="PackedScene" uid="uid://mq1pymbx1xaq" path="res://scenes/components/experience_drop_component.tscn" id="4_n254b"]
[ext_resource type="PackedScene" uid="uid://rgcv15pcivq7" path="res://scenes/components/state_machine_component.tscn" id="5_cau4j"]
[ext_resource type="Texture2D" uid="uid://c24ma2sk36hnb" path="res://Enemies/enemy_1/enemy_1.png" id="6_msprf"]
[ext_resource type="PackedScene" uid="uid://ctgi6e2nii1k2" path="res://scenes/components/hurtbox_component.tscn" id="7_xqlkj"]
[ext_resource type="PackedScene" uid="uid://deo2fouakxu3o" path="res://scenes/components/random_stream_player_2d_component.tscn" id="8_6ybub"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kej5e"]
radius = 28.0179

[node name="Enemy1" type="CharacterBody2D"]
script = ExtResource("1_yrn2s")

[node name="HealthComponent" parent="." instance=ExtResource("2_spolp")]

[node name="VelocityComponent" parent="." instance=ExtResource("3_k450e")]

[node name="ExperienceDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_n254b")]
health_component = NodePath("../HealthComponent")

[node name="StateMachineComponent" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("5_cau4j")]
enemy = NodePath("..")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("6_msprf")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_xqlkj")]
health_component = NodePath("../HealthComponent")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("8_6ybub")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kej5e")
